# wallet_demo

program/: Cargo.toml  README.md  keypair.json
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: wallet.rs
