[package]
name = "dephy-io-wallet-demo"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "7Eqw1EUXzh56y7JbhfA1Xzmx97QsWH819WhV7UAPVnQf"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^1.5.1"
shank = "^0.4.2"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "~1.18"
thiserror = "^1.0"

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
